# simple-strength-program

./: .gitignore  README.md  create_program.sh  main.py  pyproject.toml  requirements.txt  ssp.ipynb  ssp.py  strength.py
.github/: pull_request_template.md
.github/workflows/: actions.yml
config/: current_status.json  exercise.json  program-layout.yaml  program-layout.yml  user.json  user.yaml  user_lifts.yaml
output/default/: program-2022-11.csv
output/louise/: program-2022-11.csv
profiles/default/: gym.yaml  lifts.yaml
profiles/fiona/: lifts.yaml
profiles/louise/: gym.yaml  lifts.yaml  program.yaml
profiles/martin/: lifts.yaml
source/: rpe-calculator.csv  rpe.yaml
tests/: test_training_range.py
